# interactome_hierachy

./: .gitignore  pyproject.toml
notebooks/spectrum/: calculate_spectrum.py
src/interactome_hierachy/: __init__.py
src/interactome_hierachy/spectral_clustering/: __init__.py  cluster_enrichment.py  spectrum_calculation.py
src/interactome_hierachy/utils/: __init__.py  clusters_to_dict.py  dict_ncbi_to_hgnc.py
