[project]
name = "interactome-hierachy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "marlene-grabner", email = "marlene.grabner@gmail.com" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
interactome-hierachy = "interactome_hierachy:main"

[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"
